Add example url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <form action="" id="form">
-            <input type="text" id="input" style="display: inline-block;" />
+            <input type="text" id="input" value="https://news.ycombinator.com/rss" style="display: inline-block;" />
             <button>Submit</button>
         </form>
         <br>
